<resources>
    <string name="facebook_app_id">2124111651080034</string>
    <string name="fb_login_protocol_scheme">fb2124111651080034</string>


    <string name="app_name">forfoodiesbyfoodies</string>
    <string name="logo_app">Logo</string>
    <string name="main_bg">Background</string>
    <string name="main_wc_txt">Welcome Foodie</string>
    <string name="profile_wc">Welcome</string>
    <string name="welcome">For Foodies By Foodies</string>
    <string name="log_in">LOG IN</string>
    <string name="register">Register</string>
    <string name="email">E-mail Address</string>
    <string name="fn">First Name</string>
    <string name="sn">Last Name</string>
    <string name="pw">Password</string>
    <string name="confirm_pw">Confirm password</string>
    <string name="forgot_pw">Forgot Password ?</string>
    <string name="log_google">Google</string>
    <string name="log_facebook">Facebook</string>
    <string name="dont_have_an_account">Do not have an Account?</string>
    <string name="sign_up">Create new Account ?</string>
    <string name="already_have_an_account">Already Have an Account ?</string>
    <string name="reset_link">Send Reset Link</string>
    <string name="back_fw">Back to</string>
    <string name="fw_log">Log In</string>
    <string name="main_log_out">Log Out</string>
    <string name="emailaddress"><u>Email address</u></string>
    <string name="passwordprof"><u>Password</u></string>
    <string name="profilepicture">Profile Picture</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="marian">Marian</string>
    <string name="bruma">Bruma</string>
    <string name="Edit_Profile">Change your password</string>
    <string name="save_prof">Save</string>
    <string name="new_password">New password</string>
    <string name="main_restaurant">Restaurant</string>
    <string name="main_street_food">Street Food</string>
    <string name="main_forum">Forum</string>
    <string name="btn_add_rest">Add new Restaurant</string>
    <string name="rest_name">Add Restaurant Name</string>
    <string name="rest_description">Add Restaurant Description</string>
    <string name="submit_text">Submit</string>
    <string name="welcome_restaurant">Restaurants for Foodies</string>
    <string name="street_description">Add Street Food Description</string>
    <string name="street_name">Add Street Food stall Name</string>
    <string name="add_new_street">Add new Stall</string>
    <string name="street_food_head">Street Food Stalls</string>
    <string name="write_your_review">Write your review...</string>
    <string name="please_add_your_review">Please add your review</string>
    <string name="submit">Submit</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="add_location">Add Location</string>
    <string name="restaurant">Restaurant</string>
    <string name="description">Description....</string>
    <string name="textview">TextView</string>
    <string name="booking">Booking</string>
    <string name="add_review">Add Review</string>
    <string name="view_reviews">View Reviews</string>
    <string name="street_food">Street Food</string>
    <string name="location">Location</string>




</resources>