<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_streetfood"
    tools:context=".ReviewsStreet.AddReviewStreet">

    <ImageView
        android:id="@+id/street_log"
        android:layout_width="121dp"
        android:layout_height="109dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="133dp"
        android:contentDescription="@string/logo_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_app" />

    <RatingBar
        android:id="@+id/street_ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:numStars="5"
        android:progressBackgroundTint="@android:color/background_light"
        android:stepSize="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/street_textView2"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/street_rev_et"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/write_your_review"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/street_ratingBar"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/street_textView2"
        android:layout_width="331dp"
        android:layout_height="48dp"
        android:layout_marginTop="65dp"
        android:text="@string/please_add_your_review"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/street_log" />

    <Button
        android:id="@+id/street_review_btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/btn_bg"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.898"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/street_rev_et"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>