<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reg_input_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    tools:context=".RegisterActivity">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/reg_userimg"
                android:layout_width="126dp"
                android:layout_height="109dp"
                android:layout_marginStart="133dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="134dp"
                android:background="@drawable/profshape"
                android:backgroundTint="@color/btn_main_log"
                android:contentDescription="@string/profilepicture"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/reg_onoff"
                android:layout_width="121dp"
                android:layout_height="109dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/logo_app"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/main_person" />

            <EditText
                android:id="@+id/reg_input_fn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/input_bg"
                android:drawableStart="@drawable/main_person"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/fn"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/reg_input_email"
                app:layout_constraintStart_toStartOf="@+id/reg_input_email"
                app:layout_constraintTop_toBottomOf="@+id/reg_input_email" />

            <EditText
                android:id="@+id/reg_confirm_pw"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/input_bg"
                android:drawableStart="@drawable/main_security"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/confirm_pw"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/reg_input_pw"
                app:layout_constraintStart_toStartOf="@+id/reg_input_pw"
                app:layout_constraintTop_toBottomOf="@+id/reg_input_pw" />

            <Button
                android:id="@+id/btn_reg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/btn_bg"
                android:text="@string/register"
                android:textColor="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/reg_already"
                app:layout_constraintEnd_toEndOf="@+id/reg_confirm_pw"
                app:layout_constraintStart_toStartOf="@+id/reg_confirm_pw"
                app:layout_constraintTop_toBottomOf="@+id/reg_confirm_pw" />

            <EditText
                android:id="@+id/reg_input_pw"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/input_bg"
                android:drawableStart="@drawable/main_security"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/pw"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/reg_input_sn"
                app:layout_constraintStart_toStartOf="@+id/reg_input_sn"
                app:layout_constraintTop_toBottomOf="@+id/reg_input_sn" />

            <EditText
                android:id="@+id/reg_input_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/input_bg"
                android:drawableStart="@drawable/main_email"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/logo" />

            <EditText
                android:id="@+id/reg_input_sn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/input_bg"
                android:drawableStart="@drawable/main_person"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/sn"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="@+id/reg_input_fn"
                app:layout_constraintStart_toStartOf="@+id/reg_input_fn"
                app:layout_constraintTop_toBottomOf="@+id/reg_input_fn" />

            <TextView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reg_userimg" />

            <TextView
                android:id="@+id/reg_already"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:shadowColor="@color/white"
                android:text="@string/already_have_an_account"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/btn_reg"
                app:layout_constraintStart_toStartOf="@+id/btn_reg"
                app:layout_constraintTop_toBottomOf="@+id/btn_reg" />

            <ProgressBar
                android:id="@+id/reg_progressBar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:elevation="10dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>