<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    tools:context=".Restaurant.AddRestaurantActivity">


    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="248dp"
        android:layout_height="202dp"
        android:layout_marginTop="28dp"
        android:background="@mipmap/add_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/postTitleEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@drawable/input_bg"
        android:ems="10"
        android:hint="@string/rest_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/imageButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageButton"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <EditText
        android:id="@+id/descriptionEt"
        android:layout_width="300dp"
        android:layout_height="147dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/square_btn"
        android:ems="10"
        android:hint="@string/rest_description"
        android:inputType="textPersonName"
        android:padding="15dp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/submitPost"
        app:layout_constraintEnd_toEndOf="@+id/postTitleEt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/postTitleEt"
        app:layout_constraintTop_toBottomOf="@+id/postTitleEt"
        app:layout_constraintVertical_bias="0.006" />

    <Button
        android:id="@+id/submitPost"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="88dp"

        android:background="@drawable/btn_bg"
        android:text="@string/submit_text"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/descriptionEt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/descriptionEt" />


</androidx.constraintlayout.widget.ConstraintLayout>